using UnityEngine;
public class AnimatorHash
{
    public static readonly int IsMoving = Animator.StringToHash("IsMoving");
    public static readonly int IsJumping = Animator.StringToHash("IsJumping");
    public static readonly int IsFalling = Animator.StringToHash("IsFalling");
    public static readonly int KingWing = Animator.StringToHash("KingWing");
    public static readonly int IsDashing = Animator.StringToHash("IsDashing");
}
